@@ -119,6 +119,7 @@ Verilator 5.043 devel
 * Fix false IMPLICITSTATIC on localparam (#6835). [Geza Lore]
 * Fix randcase under fork (#6843). [Amal Araweelo Almis]
 * Fix JSON missing `signed` indication (#6845).
+* Fix class reference throwing cannot detect changes error (#6851).
 
 
 Verilator 5.042 2025-11-02
